--- a/STARBELL SITE NVO/index.html
+++ b/STARBELL SITE NVO/index.html
@@ -1612,7 +1612,7 @@
       <h3 class="text-3xl font-bold text-center mb-12 text-gray-800">Últimas avaliações do google<BR>
         <div class="flex justify-center items-center mb-12 text-yellow-400 text-xl">
           5,0 ★★★★★
-          <span class="text-gray-700 text-base ml-2">(23 avaliações)</span>
+          <span class="text-gray-700 text-base ml-2">(24 avaliações)</span>
         </div>
       </h3>
 
@@ -1625,6 +1625,26 @@
             <span>★</span>
             <span>★</span>
           </div>
+
+          <p class="text-gray-600 mb-4">Atendimento excelente, entrega super rápida, e o preço muito acessível. Muito bom</p>
+        <div class="flex items-center">
+          <div class="w-10 h-10 bg-blue-100 rounded-full flex items-center justify-center mr-3">
+            <span class="text-blue-600 font-bold">C</span>
+          </div>
+          <div>
+            <h5 class="font-semibold">Cristiano Ferreira</h5>
+            <p class="text-sm text-gray-500">14/08/2025</p>
+          </div>
+        </div>
+      </div>
+      <div class="testimonial-card bg-white p-6 rounded-xl shadow-md">
+        <div class="flex text-yellow-400">
+          <span>★</span>
+          <span>★</span>
+          <span>★</span>
+          <span>★</span>
+          <span>★</span>
+        </div>
 
           <p class="text-gray-600 mb-4">Ola 😃
 Eu só tenho que agradecer .Yara pelo seu atendimento excelente muito atenciosa e seu entregador também muito caprichoso excelente equipe da Star Bell Camas Box.
@@ -1647,6 +1667,7 @@ Deus abençoe 🙏 muito obrigado</p>
           <span>★</span>
           <span>★</span>
         </div>
+          
 
         <p class="text-gray-600 mb-4">Ameiiiii!!!! a cama é perfeita!!! Atendimento excelente
           entrega super rápida , parabéns super indico 👏👏👏👏👏👏</p>
