--- a/STARBELL SITE NVO/index.html
+++ b/STARBELL SITE NVO/index.html
@@ -1131,7 +1131,7 @@
                 <span>★</span>
               </div>
             </div>
-            <button onclick="openWhatsApp('Olá vim do site e gostaria de saber mais sobre o colchão Mileniun')"
+            <button onclick="openWhatsApp('Olá vim do site e gostaria de saber mais sobre o Colchão Casal High Confort D28 ')"
               class="w-full bg-blue-600 text-white py-3 rounded-lg font-semibold hover:bg-blue-700 transition-colors">
               Comprar Agora
             </button>
@@ -1242,7 +1242,7 @@
                 <span>★</span>
               </div>
             </div>
-            <button onclick="openWhatsApp('Olá vim do site e gostaria de saber mais sobre o colchão Mileniun')"
+            <button onclick="openWhatsApp('Olá vim do site e gostaria de saber mais sobre o Colchão Casal Van Gogh D33')"
               class="w-full bg-blue-600 text-white py-3 rounded-lg font-semibold hover:bg-blue-700 transition-colors">
               Comprar Agora
             </button>
@@ -1358,7 +1358,10 @@
               </div>
             </div>
 
-
+<button onclick="openWhatsApp('Olá vim do site e gostaria de saber mais sobre o Colchão casal absoluto (molas pocket) ')"
+              class="w-full bg-blue-600 text-white py-3 rounded-lg font-semibold hover:bg-blue-700 transition-colors">
+              Comprar Agora
+            </button>
 
           </div>
         </div>
@@ -1474,6 +1477,10 @@
               </div>
             </div>
 
+<button onclick="openWhatsApp('Olá vim do site e gostaria de saber mais sobre o Colchão casal Lisboa (molas pocket) ')"
+              class="w-full bg-blue-600 text-white py-3 rounded-lg font-semibold hover:bg-blue-700 transition-colors">
+              Comprar Agora
+            </button>
 
 
           </div>
@@ -1586,7 +1593,7 @@
                 <span>★</span>
               </div>
             </div>
-            <button onclick="openWhatsApp('Olá vim do site e gostaria de comprar o Colchão queen barcelona')"
+            <button onclick="openWhatsApp('Olá vim do site e gostaria de comprar Colchão Malta QUEEN SIZE (molas pocket) ')"
               class="w-full bg-blue-600 text-white py-3 rounded-lg font-semibold hover:bg-blue-700 transition-colors">
               Comprar agora<br>
             </button>
@@ -1704,7 +1711,7 @@
                 <span>★</span>
               </div>
             </div>
-            <button onclick="openWhatsApp('Olá vim do site e gostaria de comprar o Colchão queen barcelona')"
+            <button onclick="openWhatsApp('Olá vim do site e gostaria de comprar o Colchão Lisboa QUEEN SIZE (molas pocket)')"
               class="w-full bg-blue-600 text-white py-3 rounded-lg font-semibold hover:bg-blue-700 transition-colors">
               Comprar agora<br>
             </button>
@@ -1820,7 +1827,7 @@
                 <span>★</span>
               </div>
             </div>
-            <button onclick="openWhatsApp('Olá vim do site e gostaria de comprar o Colchão queen barcelona')"
+            <button onclick="openWhatsApp('Olá vim do site e gostaria de comprar o Colchão High confort QUEEN SIZE D28')"
               class="w-full bg-blue-600 text-white py-3 rounded-lg font-semibold hover:bg-blue-700 transition-colors">
               Comprar agora<br>
             </button>
@@ -1836,7 +1843,7 @@
             <img src="imagens/vg-queen.png" alt="box bau solteiro" class="h-full object-contain">
           </div>
           <div class="p-6">
-            <h4 class="text-xl font-semibold mb-2">Colchão High confort QUEEN SIZE D33 <p
+            <h4 class="text-xl font-semibold mb-2">Colchão Van Gogh QUEEN SIZE D33 <p
                 class="text-xs font-bold text-black mt-2">
                 (9 vendidos) 4 disponivel
               </p>
@@ -1937,7 +1944,7 @@
                 <span>★</span>
               </div>
             </div>
-            <button onclick="openWhatsApp('Olá vim do site e gostaria de comprar o Colchão queen barcelona')"
+            <button onclick="openWhatsApp('Olá vim do site e gostaria de comprar o Colchão Van Gogh QUEEN SIZE D33 ')"
               class="w-full bg-blue-600 text-white py-3 rounded-lg font-semibold hover:bg-blue-700 transition-colors">
               Comprar agora<br>
             </button>
