--- a/STARBELL SITE NVO/index.html
+++ b/STARBELL SITE NVO/index.html
@@ -6,6 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>STAR BELL CAMAS BOX</title>
   <script src="https://cdn.tailwindcss.com"></script>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5N1JZWCLGZ">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5N1JZWCLGZ');
+</script>
+  
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
 
@@ -2684,5 +2696,6 @@ Deus abençoe 🙏 muito obrigado</p>
   </script>
 
 </body>
+
 
 </html>
