--- a/STARBELL SITE NVO/index.html
+++ b/STARBELL SITE NVO/index.html
@@ -7,6 +7,11 @@
   <title>STAR BELL CAMAS BOX</title>
   <script src="https://cdn.tailwindcss.com"></script>
 
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+<link rel="manifest" href="site.webmanifest">
+
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-5N1JZWCLGZ">
 </script>
@@ -2699,3 +2704,4 @@ Deus abençoe 🙏 muito obrigado</p>
 
 
 </html>
+
