--- a/STARBELL SITE NVO/index.html
+++ b/STARBELL SITE NVO/index.html
@@ -2320,7 +2320,7 @@
       <h3 class="text-3xl font-bold text-center mb-12 text-gray-800">Últimas avaliações do google<BR>
         <div class="flex justify-center items-center mb-12 text-yellow-400 text-xl">
           5,0 ★★★★★
-          <span class="text-gray-700 text-base ml-2">(29 avaliações)</span>
+          <span class="text-gray-700 text-base ml-2">(31 avaliações)</span>
         </div>
       </h3>
 
@@ -2334,6 +2334,27 @@
             <span>★</span>
           </div>
 
+ <p class="text-gray-600 mb-4">Comprei a cama box de casal e simplesmente amei! Produto de ótima qualidade, muito confortável, firme e ao mesmo tempo macio na medida certa. O acabamento é bem feito, material resistente e dá para perceber que vai durar bastante tempo. A entrega foi rápida e tudo chegou em perfeito estado. Estou dormindo muito melhor desde que comecei a usar, realmente superou minhas expectativas. Recomendo de olhos fechados!</p>
+        <div class="flex items-center">
+          <div class="w-10 h-10 bg-blue-100 rounded-full flex items-center justify-center mr-3">
+            <span class="text-blue-600 font-bold">C</span>
+          </div>
+          <div>
+            <h5 class="font-semibold">Crislaine Nunes
+</h5>
+            <p class="text-sm text-gray-500">02/10/2025</p>
+          </div>
+        </div>
+      </div>
+      <div class="testimonial-card bg-white p-6 rounded-xl shadow-md">
+        <div class="flex text-yellow-400">
+          <span>★</span>
+          <span>★</span>
+          <span>★</span>
+          <span>★</span>
+          <span>★</span>
+        </div>
+          
                 <p class="text-gray-600 mb-4">Excelente!</p>
         <div class="flex items-center">
           <div class="w-10 h-10 bg-blue-100 rounded-full flex items-center justify-center mr-3">
@@ -2706,5 +2727,6 @@ Deus abençoe 🙏 muito obrigado</p>
 
 
 </html>
+
 
 
