--- a/STARBELL SITE NVO/index.html
+++ b/STARBELL SITE NVO/index.html
@@ -2334,6 +2334,26 @@
             <span>★</span>
           </div>
 
+       <p class="text-gray-600 mb-4">Atendimento nota 1000 me ajudaram muito a entrega ,pra me ajudar fizeram no domingo material de boa qualidade, comprei uma base baú queen</p>
+        <div class="flex items-center">
+          <div class="w-10 h-10 bg-blue-100 rounded-full flex items-center justify-center mr-3">
+            <span class="text-blue-600 font-bold">V</span>
+          </div>
+          <div>
+            <h5 class="font-semibold">Valdirene Massena</h5>
+            <p class="text-sm text-gray-500">03/10/2025</p>
+          </div>
+        </div>
+      </div>
+      <div class="testimonial-card bg-white p-6 rounded-xl shadow-md">
+        <div class="flex text-yellow-400">
+          <span>★</span>
+          <span>★</span>
+          <span>★</span>
+          <span>★</span>
+          <span>★</span>
+        </div>
+          
  <p class="text-gray-600 mb-4">Comprei a cama box de casal e simplesmente amei! Produto de ótima qualidade, muito confortável, firme e ao mesmo tempo macio na medida certa. O acabamento é bem feito, material resistente e dá para perceber que vai durar bastante tempo. A entrega foi rápida e tudo chegou em perfeito estado. Estou dormindo muito melhor desde que comecei a usar, realmente superou minhas expectativas. Recomendo de olhos fechados!</p>
         <div class="flex items-center">
           <div class="w-10 h-10 bg-blue-100 rounded-full flex items-center justify-center mr-3">
@@ -2727,6 +2747,7 @@ Deus abençoe 🙏 muito obrigado</p>
 
 
 </html>
+
 
 
 
